--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1,3 +1,22 @@
 .logo-link{
   display: block;
 }
+
+.why-us-list{
+  li{
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    margin-bottom: 12px;
+    font-weight: 700;
+  }
+}
+
+.footer{
+  .logo{
+    margin-bottom: 25px;
+  }
+}
+
+.stat-item{
+  margin-bottom: 20px;
+}
