--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -20,3 +20,15 @@
 .stat-item{
   margin-bottom: 20px;
 }
+
+.service-block{
+  margin-bottom: 40px;
+  h5{
+    color: #00c0e2;
+    margin-bottom: 20px;
+  }
+  p{
+    font-size: 14px;
+    text-align: left;
+  }
+}
