--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -39,3 +39,14 @@
     margin-bottom: 14px;
   }
 }
+
+.job-block{
+  margin-bottom: 60px;
+  .job-heading{
+    font-weight: 700;
+    font-size: 18px;
+    color: #00c0e2;
+    text-decoration: underline;
+    margin-bottom: 20px;
+  }
+}
